samples/_failures_safe/1761608666_312de0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_492eb06b.c: In function ‘main’:
./samples/SAFE/__tmp_492eb06b.c:174:5: error: expected expression at end of input
  174 |     if (fgets(input, sizeof(input),
      |     ^~
./samples/SAFE/__tmp_492eb06b.c:174:5: error: expected declaration or statement at end of input
